--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -3,7 +3,6 @@
     <ul>
         <li><a href="https://x.com/__Jaisurya"> X</a></li>
         <li><a href="https://www.linkedin.com/in/jaisurya-prabakaran-3619aa226/">Linked In</a></li>
-        <li><a href="https://github.com/jaiSuryaPrabu?tab=repositories">Github</a></li>
-        <li><a href="https://github.com/jaiSuryaPrabu?tab=repositories">Documentation</a></li>
+        <li><a href="https://github.com/JaiSuryaPrabu/cut-out">Code</a></li>
     </ul>
 </footer>
